# Dr_Assistant

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  build_kb_artifacts.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_pipeline.py
.github/workflows/: ci.yml
data/output/: kb.pkl  kb_embeddings.pt  kb_texts.pkl
docs/: README.md  agents.md  data-and-artifacts.md  getting-started.md  post-consultation-workflow.md  running-the-project.md  testing-with-synthetic-dataset.md  testing.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
notebooks/: RAG.ipynb  experimentation.ipynb  video_to_audio.ipynb
pipelines/: __init__.py  build_kb_artifacts.py
scripts/: evaluate_retrieval.py
src/: cli.py
src/agents/: __init__.py  _compat.py  case_builder_agent.py  differential_agent.py  documentation_agent.py  planner_agent.py  retrieval_agent.py
src/api/: main.py
src/audio/: chunking.py  loaders.py  merge.py  normalize.py
src/contracts/: __init__.py  chunk.py  consultation.py  transcript.py
src/pipelines/: __init__.py  legacy_transcription_pipeline.py  post_consultation_pipeline.py  run_full_pipeline.py  transcribe_chunks.py  transcription_pipeline.py
src/prompts/: care_plan_system_prompt.md  case_extraction_system_prompt.md  differential_generation_system_prompt.md  patient_summary_system_prompt.md  soap_note_system_prompt.md
src/providers/: openai_transcription.py
src/rag/: __init__.py  build_kb_artifacts.py  config.py  embedder.py  kb_builder.py  kb_loader.py  query_builder.py  retriever.py
src/tools/: care_plan_tool.py  case_extraction_tool.py  differential_generation_tool.py  illness_retrieval_tool.py  patient_summary_tool.py  red_flag_detector_tool.py  soap_note_tool.py  transcription_tool.py  uncertainty_calibration_tool.py  unsafe_output_checker.py
src/utils/: exporters.py  logging.py  output_writer.py  runtime_dependencies.py  transcript_cleaning.py
tests/: test_contracts.py  test_loaders.py  test_merge.py  test_openai_transcription.py  test_pipeline.py
tests/agents/: test_documentation_agent.py  (+1 more)
(+20 files in other folders)
