[project]
name = "dr-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "fastapi-clerk-auth",
    "moviepy",
    "openai",
    "openai-agents",
    "pydantic",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "ipykernel",
    "pytest",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
