[project]
name = "dr-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "fastapi-clerk-auth",
    "langchain-chroma",
    "langchain-community",
    "langchain-huggingface",
    "langchain-openai",
    "langchain-text-splitters",
    "moviepy",
    "numpy",
    "openai",
    "openai-agents",
    "pandas",
    "plotly",
    "pydantic",
    "python-dotenv",
    "scikit-learn",
    "sentence-transformers",
    "tiktoken",
]

[dependency-groups]
dev = [
    "ipykernel",
    "pytest",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
