[project]
name = "dr-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "fastapi-clerk-auth",
    "langchain-chroma",
    "langchain-community",
    "langchain-huggingface",
    "langchain-openai",
    "langchain-text-splitters",
    "moviepy",
    "numpy",
    "openai",
    "openai-agents",
    "pandas",
    "plotly",
    "pydantic",
    "python-multipart",
    "python-dotenv",
    "scikit-learn",
    "sentence-transformers",
    "tiktoken",
    "uvicorn",
]

[project.scripts]
dr-assistant = "src.cli:main"

[dependency-groups]
dev = [
    "ipykernel",
    "pytest",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
norecursedirs = [
    ".git",
    ".venv",
    ".pytest_cache",
    ".pytest_tmp",
    ".tmp",
    "node_modules",
    "frontend",
    "pytest-cache-files-*",
    "tmp*",
]
